M1.15 T4 end-to-end: documents are searchable in a single-node cluster
Criterion 2's FIRST HALF is met. 100 documents travel producer -> ingester ->
local-FS segment -> consumer -> plugin -> OpenSearch's ingestion engine and
come back from _search, for TWO object-store requests, with zero requests
while idle. SearchableIT is green and no longer @Ignore'd.

The second half -- _offset present and monotonic -- is NOT met and is now
M1.15d. It was previously owed by a sentence rather than a row, which both
reviewers caught: the difference between deferred and dropped is exactly that
row, and without it this commit would have shipped it as dropped.

Two real defects were behind the "0 documents", and neither was in our seams.
Both were invisible until the engine's own log was recovered -- it does not
reach the console, it is captured into the JUnit XML <system-out>, which is
why several rounds of guessing found nothing:

  - _version had to be a JSON STRING. OpenSearch's DEFAULT mapper casts the
    field to String, so the numeric literal failed every batch with
    "ClassCastException: Integer cannot be cast to String" -- logged and
    swallowed inside MessageProcessorRunnable, so the only symptom was zero
    documents indexed. Now recorded in ADR-0020, which defines this envelope
    and previously said nothing about the type.

  - String.format without Locale.ROOT renders non-ASCII digits. The randomized
    test framework picks a random default locale, and under one with
    Arabic-Indic digits the poller logged "seeking to earliest pointer
    ۰۰۰۰۰۰۰۰۰۰۰۰۰۰۰۰۰۰۰". That value is what OpenSearch persists as
    batch_start and parses back on restart, and the same defect corrupted
    every segment and commit-log object key. Four sites fixed:
    BinStoreOffset.asString, SegmentKey.key, SegmentKey.hourPrefix and
    CommitLog's delta key.

    ⚠️ A first version of this change also claimed DateTimeFormatter was a
    second sink. That is FALSE and both reviewers mea